# dlp-a2-cifar-image-classification

./: a2_image_classification.ipynb  pyproject.toml  readme.md
utils/: dataset.py  early_stopping.py  models.py  training.py
